fixed the width in noficaton drop down on mobile site

--- a/app/static/css/site-sm.styl
+++ b/app/static/css/site-sm.styl
@@ -134,7 +134,8 @@
       width inherit
       margin-left 5px
       float none
-      
-  .notification-drop-down
-    width 100%!important
+  
+  .navbar-collapse
+    .notification-drop-down
+      width 100%!important
 
